apply plugin: 'com.android.application'
apply plugin: 'org.jetbrains.kotlin.android'

android {
    namespace 'sq.rogue.rosettadrone'
    compileSdk 37
    defaultConfig {
        applicationId "sq.rogue.rosettadrone"
        minSdkVersion 24
        targetSdk 37
        versionCode 1
        versionName '5.2.0'    // This is the one to modify...
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    repositories {
        mavenCentral()
        maven {
            url "https://maven.java.net/content/groups/public/"
        }
    }


    buildTypes {
        release {
            minifyEnabled false
            debuggable false
            jniDebuggable false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
            debuggable true
            jniDebuggable false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            renderscriptOptimLevel 0
        }
    }
    packagingOptions {
        jniLibs {
            keepDebugSymbols += ['*/*/libdjivideo.so', '*/*/libSDKRelativeJNI.so', '*/*/libFlyForbid.so', '*/*/libduml_vision_bokeh.so', '*/*/libyuv2.so', '*/*/libGroudStation.so', '*/*/libFRCorkscrew.so', '*/*/libUpgradeVerify.so', '*/*/libFR.so', '*/*/libDJIFlySafeCore.so', '*/*/libdjifs_jni.so', '*/*/libsfjni.so', '*/*/libDJICommonJNI.so', '*/*/libDJICSDKCommon.so', '*/*/libDJIUpgradeCore.so', '*/*/libDJIUpgradeJNI.so', '*/*/libDJIWaypointV2Core.so', '*/*/libAMapSDK_MAP_v6_9_2.so', '*/*/libDJIMOP.so', '*/*/libDJISDKLOGJNI.so']
        }
        resources {
            excludes += ['META-INF/rxjava.properties', 'META-INF/rxjava.properties', 'assets/location_map_gps_locked.png', 'assets/location_map_gps_3d.png']
            pickFirsts += ['META-INF/LICENSE.txt']
        }
    }


    externalNativeBuild {
        cmake {
            path 'CMakeLists.txt'
        }
    }
    defaultConfig {
        ndk {
            // DJI has removed 'x86' support
            abiFilters 'armeabi-v7a', 'arm64-v8a'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
//    ndkVersion '21.4.7075529'

    // We need to be restrict as we get error on newer versions...
    //   buildToolsVersion '30.0.2'
    ndkVersion '22.0.7026061'
    lint {
        abortOnError false
    }
    kotlinOptions {
        jvmTarget = "17"
    }
}
dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.security:security-crypto:1.1.0'
    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    implementation 'com.squareup:otto:1.3.8'

    implementation('com.dji:dji-sdk:4.16.4', {
        /**
         * Uncomment the "library-anti-distortion" if your app does not need Anti Distortion for Mavic 2 Pro and Mavic 2 Zoom.
         * Uncomment the "fly-safe-database" if you need database for release, or we will download it when DJISDKManager.getInstance().registerApp
         * is called.
         * Both will greatly reducing the size of the APK.
         */
        exclude module: 'library-anti-distortion'
        exclude module: 'fly-safe-database'
    })
    compileOnly 'com.dji:dji-sdk-provided:4.16.4'

    implementation 'com.dji:dji-uxsdk:4.16'

    implementation 'androidx.annotation:annotation:1.10.0'               // 1.2.0
    implementation 'androidx.appcompat:appcompat:1.7.1'                 // 1.2.0
    implementation 'androidx.preference:preference:1.2.1'               // 1.1.1
    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'        // 1.0.0
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'   // 2.0.4
    implementation 'androidx.multidex:multidex:2.0.1'                   // 2.0.1
    implementation 'androidx.recyclerview:recyclerview:1.4.0'           // 1.1.0
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'      // 2.2.0

    testImplementation 'junit:junit:4.13.2'                             // 4.13.2
    testImplementation 'org.mockito:mockito-core:5.23.0'                // 2.7.22
    testImplementation 'org.mockito:mockito-android:5.23.0'             // 2.7.22

    implementation 'com.google.android.material:material:1.14.0'         // 1.3.0
    implementation 'com.google.android.gms:play-services-maps:20.0.0'   // 17.0.0
    implementation 'com.google.android.gms:play-services-basement:18.10.0' // 17.6.0
    implementation 'com.google.android.gms:play-services-base:18.10.0'   // 17.6.0
    implementation 'com.google.android.gms:play-services-gcm:17.0.0'    // 17.0.0
    implementation 'com.google.android.gms:play-services-location:21.3.0' // 18.0.0
    implementation 'com.google.maps:google-maps-services:2.2.0'        // 0.18.0

    implementation 'com.jakewharton:butterknife:10.2.3'                 // 10.2.3
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'   // 10.2.3
    implementation 'androidx.core:core:1.19.0'                           // 1.3.2
    implementation 'androidx.core:core-ktx:1.19.0'                       // 1.3.2
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0'   // 2.3.1

    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31'     // 1.4.31

    implementation 'javax.mail:mail:1.4.7'                              // 1.4.7
    //  exclude 'javax.activation:activation:1.1'
    //  implementation 'com.sun.mail:android-activation:1.6.6'
    // WebRTC library
    implementation 'org.webrtc:google-webrtc:1.0.32006'
    // Websocket implementation
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    // Websocket utils for event-driven approach.
    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
    // Because RxAndroid releases are few and far between, it is recommended you also
    // explicitly depend on RxJava's latest version for bug fixes and new features.
    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
    implementation 'io.reactivex.rxjava3:rxjava:3.1.12'

}

tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
    ]
}


